Adding working directory archiving